--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <!-- For PNG favicon -->
+<link rel="icon" type="image/png" href="img/hr.png">
     <title>Profile Bootstrap Theme</title>
 
     <!-- Global stylesheets -->
