--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- For PNG favicon -->
 <link rel="icon" type="image/png" href="img/hr.png">
-    <title>Profile Bootstrap Theme</title>
+    <title>Hritik Jain</title>
 
     <!-- Global stylesheets -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
