--- a/index.html
+++ b/index.html
@@ -790,15 +790,14 @@
   });
 </script>
 
-         <!--====================================================
+<!--====================================================
                         PDF DOWNLOAD
     ======================================================-->  
 <section class="resume-section py-5 d-flex align-items-center" id="resume-download">
     <div class="container text-center">
         <h2 class="mb-3 display-4 fw-bold">My Resume</h2>
         <div class="heading-underline mx-auto mb-4"></div>
-
-        <a href="PDF/Hritik_Jain_Resume.pdf" download="Hritik_Jain_Resume.pdf" class="btn btn-primary btn-lg custom-download-btn">
+        <a href="pdf/Hritik_Jain_Resume.pdf" download="Hritik_Jain_Resume.pdf" class="btn btn-primary btn-lg custom-download-btn">
             <i class="fa fa-download me-2"></i> Download My Resume
         </a>
     </div>
