--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+                </li>
             </ul>
         </div>
     </nav>
