--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+                    <a class="nav-link js-scroll-trigger" href="#resume-download">Resume</a>
                 </li>
             </ul>
         </div>
